# OpenGLPlayground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Mesh.h  Primitives.h  ShaderReader.h  Shaders.h  Texture2D.h  geometricalStructs.h  helloTriangle.h
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/shaders/Fragment/: FragTexture.glsl
res/shaders/Vertex/: Example.glsl  UpsideDown.glsl  VertTextTrans.glsl  VertTexture.glsl
shaders/Fragment/: Example.glsl  FragmentShader_Uniform.glsl
src/: Mesh.cpp  ShaderReader.cpp  Shaders.cpp  Texture2D.cpp  helloTriangle.cpp  main.cpp
